@@ -1,3 +1,11 @@
+2007-09-21  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* doc/C/gnotime.xml: 
+	- Fixed some typos.
+	- Updated section about timeout dialogs
+	- Updated Free Software Foundation address
+	- Added section about gnotime-remote
+
 2007-09-20  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* pt_BR.po: Fixed typo.
